cmake_minimum_required(VERSION 3.22)
project(TTPzhao_v2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(TTPzhao_v2
        Activate.cpp
        AddCandidate.cpp
        AddExtraCandidates.cpp
        AddTourCandidates.cpp
        AdjustCandidateSet.cpp
        AdjustClusters.cpp
        AllocateStructures.cpp
        Ascent.cpp
        Best2OptMove.cpp
        Best3OptMove.cpp
        Best4OptMove.cpp
        Best5OptMove.cpp
        BestKOptMove.cpp
        BestSpecialOptMove.cpp
        Between.cpp
        Between_SL.cpp
        Between_SSL.cpp
        BIT.cpp
        BIT.h
        BridgeGain.cpp
        BuildKDTree.cpp
        C.cpp
        CandidateReport.cpp
        ChooseInitialTour.cpp
        CLARIST.h
        Connect.cpp
        Create_POPMUSIC_CandidateSet.cpp
        CreateCandidateSet.cpp
        CreateDelaunayCandidateSet.cpp
        CreateNNCandidateSet.cpp
        CreateQuadrantCandidateSet.cpp
        CTSP_InitialTour.cpp
        CVRP_InitialTour.cpp
        Delaunay.cpp
        Delaunay.h
        Distance.cpp
        Distance_MTSP.cpp
        Distance_SOP.cpp
        Distance_SPECIAL.cpp
        eprintf.cpp
        ERXT.cpp
        Excludable.cpp
        Exclude.cpp
        FindTour.cpp
        FixedOrCommonCandidates.cpp
        Flip.cpp
        Flip_SL.cpp
        Flip_SSL.cpp
        Forbidden.cpp
        FreeStructures.cpp
        fscanint.cpp
        Gain23.cpp
        GainType.h
        GenerateCandidates.cpp
        Genetic.cpp
        Genetic.h
        GeoConversion.cpp
        GeoConversion.h
        GetTime.cpp
        gpx.cpp
        gpx.h
        GreedyTour.cpp
        Hashing.cpp
        Hashing.h
        Heap.cpp
        Heap.h
        Improvement.cpp
        IsBackboneCandidate.cpp
        IsCandidate.cpp
        IsCommonEdge.cpp
        IsPossibleCandidate.cpp
        KSwapKick.cpp
        LinKernighan.cpp
        LKH.cpp
        LKH.h
        LKHmain.cpp
        LKMatrix.cpp
        LKMatrix.h
        Make2OptMove.cpp
        Make3OptMove.cpp
        Make4OptMove.cpp
        Make5OptMove.cpp
        MakeKOptMove.cpp
        MergeTourWithBestTour.cpp
        MergeWithTourCLARIST.cpp
        MergeWithTourGPX2.cpp
        MergeWithTourIPT.cpp
        Minimum1TreeCost.cpp
        MinimumSpanningTree.cpp
        MTSP2TSP.cpp
        MTSP_InitialTour.cpp
        MTSP_Report.cpp
        MTSP_WriteSolution.cpp
        NormalizeNodeList.cpp
        NormalizeSegmentList.cpp
        OrderCandidateSet.cpp
        PatchCycles.cpp
        PDPTW_Reduce.cpp
        Penalty_1_PDTSP.cpp
        Penalty_ACVRP.cpp
        Penalty_BWTSP.cpp
        Penalty_CCVRP.cpp
        Penalty_CTSP.cpp
        Penalty_CVRP.cpp
        Penalty_CVRPTW.cpp
        Penalty_M1_PDTSP.cpp
        Penalty_M_PDTSP.cpp
        Penalty_MLP.cpp
        Penalty_MTSP.cpp
        Penalty_OVRP.cpp
        Penalty_PDPTW.cpp
        Penalty_PDTSP.cpp
        Penalty_PDTSPF.cpp
        Penalty_PDTSPL.cpp
        Penalty_RCTVRP.cpp
        Penalty_SOP.cpp
        Penalty_TRP.cpp
        Penalty_TSPDL.cpp
        Penalty_TSPPD.cpp
        Penalty_TSPTW.cpp
        Penalty_VRPB.cpp
        Penalty_VRPBTW.cpp
        Penalty_VRPPD.cpp
        printff.cpp
        PrintParameters.cpp
        Random.cpp
        ReadCandidates.cpp
        ReadEdges.cpp
        ReadLine.cpp
        ReadParameters.cpp
        ReadPenalties.cpp
        ReadProblem.cpp
        RecordBestTour.cpp
        RecordBetterTour.cpp
        RemoveFirstActive.cpp
        ResetCandidateSet.cpp
        RestoreTour.cpp
        Segment.h
        SegmentSize.cpp
        Sequence.cpp
        Sequence.h
        SFCTour.cpp
        SINTEF_WriteSolution.cpp
        slover.cpp
        slover.h
        SolveCompressedSubproblem.cpp
        SolveDelaunaySubproblems.cpp
        SolveKarpSubproblems.cpp
        SolveKCenterSubproblems.cpp
        SolveKMeansSubproblems.cpp
        SolveRoheSubproblems.cpp
        SolveSFCSubproblems.cpp
        SolveSubproblem.cpp
        SolveSubproblemBorderProblems.cpp
        SolveTourSegmentSubproblems.cpp
        SOP_InitialTour.cpp
        SOP_RepairTour.cpp
        SOP_Report.cpp
        Statistics.cpp
        StatusReport.cpp
        StoreTour.cpp
        STTSP2TSP.cpp
        SymmetrizeCandidateSet.cpp
        test.cpp
        TrimCandidateSet.cpp
        TSPDL_InitialTour.cpp
        TSPTW_MakespanCost.cpp
        TSPTW_Reduce.cpp
        VRPB_Reduce.cpp
        WriteCandidates.cpp
        WritePenalties.cpp
        WriteTour.cpp)
