cmake_minimum_required(VERSION 3.22)
project(SRC)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_COMPILER gcc)  # 使用gcc作为C编译器

include_directories(INCLUDE)

add_executable(LKH
        INCLUDE/BIT.h
        INCLUDE/CLARIST.h
        INCLUDE/Delaunay.h
        INCLUDE/GainType.h
        INCLUDE/Genetic.h
        INCLUDE/GeoConversion.h
        INCLUDE/gpx.h
        INCLUDE/Hashing.h
        INCLUDE/Heap.h
        INCLUDE/LKH.h
        INCLUDE/Segment.h
        INCLUDE/Sequence.h
        Activate.c
        AddCandidate.c
        AddExtraCandidates.c
        AddTourCandidates.c
        AdjustCandidateSet.c
        AdjustClusters.c
        AllocateStructures.c
        Ascent.c
        Best2OptMove.c
        Best3OptMove.c
        Best4OptMove.c
        Best5OptMove.c
        BestKOptMove.c
        BestSpecialOptMove.c
        Between.c
        Between_SL.c
        Between_SSL.c
        BIT.c
        BridgeGain.c
        BuildKDTree.c
        C.c
        CandidateReport.c
        ChooseInitialTour.c
        Connect.c
        Create_POPMUSIC_CandidateSet.c
        CreateCandidateSet.c
        CreateDelaunayCandidateSet.c
        CreateNNCandidateSet.c
        CreateQuadrantCandidateSet.c
        CTSP_InitialTour.c
        CVRP_InitialTour.c
        Delaunay.c
        Distance.c
        Distance_MTSP.c
        Distance_SOP.c
        Distance_SPECIAL.c
        eprintf.c
        ERXT.c
        Excludable.c
        Exclude.c
        FindTour.c
        FixedOrCommonCandidates.c
        Flip.c
        Flip_SL.c
        Flip_SSL.c
        Forbidden.c
        FreeStructures.c
        fscanint.c
        Gain23.c
        GenerateCandidates.c
        Genetic.c
        GeoConversion.c
        GetTime.c
        gpx.c
        GreedyTour.c
        Hashing.c
        Heap.c
        Improvement.c
        IsBackboneCandidate.c
        IsCandidate.c
        IsCommonEdge.c
        IsPossibleCandidate.c
        KSwapKick.c
        LinKernighan.c
        LKH.c
        LKHmain.c
        Make2OptMove.c
        Make3OptMove.c
        Make4OptMove.c
        Make5OptMove.c
        MakeKOptMove.c
        MergeTourWithBestTour.c
        MergeWithTourCLARIST.c
        MergeWithTourGPX2.c
        MergeWithTourIPT.c
        Minimum1TreeCost.c
        MinimumSpanningTree.c
        MTSP2TSP.c
        MTSP_InitialTour.c
        MTSP_Report.c
        MTSP_WriteSolution.c
        NormalizeNodeList.c
        NormalizeSegmentList.c
        OrderCandidateSet.c
        PatchCycles.c
        PDPTW_Reduce.c
        Penalty_1_PDTSP.c
        Penalty_ACVRP.c
        Penalty_BWTSP.c
        Penalty_CCVRP.c
        Penalty_CTSP.c
        Penalty_CVRP.c
        Penalty_CVRPTW.c
        Penalty_M1_PDTSP.c
        Penalty_M_PDTSP.c
        Penalty_MLP.c
        Penalty_MTSP.c
        Penalty_OVRP.c
        Penalty_PDPTW.c
        Penalty_PDTSP.c
        Penalty_PDTSPF.c
        Penalty_PDTSPL.c
        Penalty_RCTVRP.c
        Penalty_SOP.c
        Penalty_TRP.c
        Penalty_TSPDL.c
        Penalty_TSPPD.c
        Penalty_TSPTW.c
        Penalty_VRPB.c
        Penalty_VRPBTW.c
        Penalty_VRPPD.c
        printff.c
        PrintParameters.c
        Random.c
        ReadCandidates.c
        ReadEdges.c
        ReadLine.c
        ReadParameters.c
        ReadPenalties.c
        ReadProblem.c
        RecordBestTour.c
        RecordBetterTour.c
        RemoveFirstActive.c
        ResetCandidateSet.c
        RestoreTour.c
        SegmentSize.c
        Sequence.c
        SFCTour.c
        SINTEF_WriteSolution.c
        SolveCompressedSubproblem.c
        SolveDelaunaySubproblems.c
        SolveKarpSubproblems.c
        SolveKCenterSubproblems.c
        SolveKMeansSubproblems.c
        SolveRoheSubproblems.c
        SolveSFCSubproblems.c
        SolveSubproblem.c
        SolveSubproblemBorderProblems.c
        SolveTourSegmentSubproblems.c
        SOP_InitialTour.c
        SOP_RepairTour.c
        SOP_Report.c
        Statistics.c
        StatusReport.c
        StoreTour.c
        STTSP2TSP.c
        SymmetrizeCandidateSet.c
        TrimCandidateSet.c
        TSPDL_InitialTour.c
        TSPTW_MakespanCost.c
        TSPTW_Reduce.c
        VRPB_Reduce.c
        WriteCandidates.c
        WritePenalties.c
        WriteTour.c main.c hello_world.c)

target_link_libraries(LKH m)